--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -42,3 +42,15 @@ footer {
         color: var(--accent-color3)
     }
 }
+
+[data-theme='light'] {
+    footer {
+        .brand-container {
+            .brand {
+                img {
+                    filter: brightness(0);
+                }
+            }
+        }
+    }
+}
