--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -10,6 +10,15 @@ nav {
         }
         .toggle-container {
             display: none;
+
+            .mode {
+                .dark {
+                    color: black;
+                }
+                .light {
+                    color: yellow;
+                }
+            }
         }
     }
     .links-container {
@@ -18,6 +27,12 @@ nav {
             display: flex;
             gap: 3rem;
             li {
+                .dark {
+                    color: black;
+                }
+                .light {
+                    color: yellow;
+                }
                 a {
                     color: var(--accent-color1);
                     text-decoration: none;
@@ -32,4 +47,16 @@ nav {
         }
     }
 
+}
+
+[data-theme='light'] {
+    nav {
+        .brand-container {
+            .brand {
+                img {
+                    filter: brightness(0);
+                }
+            }
+        }
+    }
 }
