--- a/src/sass/sections/_free.scss
+++ b/src/sass/sections/_free.scss
@@ -77,4 +77,33 @@
 
     }
   }
+  @media screen and (min-width: 280px) and (max-width: 1080px) {
+    margin: 0;
+    .container {
+      padding: 1rem 2rem;
+      border-radius: 0;
+      height: 40vh;
+      .background {
+        .pink {
+          left: -70%;
+        }
+        .green {
+          right: -100%;
+        }
+      }
+      .content {
+        padding: 0;
+        font-size: 16px;
+        gap: 1rem;
+        .title {
+          font-size: 22px;
+        }
+      }
+    }
+    .cards {
+      .card1, .card2 {
+        zoom: 0.5;
+      }
+    }
+  }
 }
