--- a/src/sass/sections/_like.scss
+++ b/src/sass/sections/_like.scss
@@ -38,4 +38,19 @@
         }
       }
     }
+    
+    @media screen and (min-width: 280px) and (max-width: 1080px) {
+      
+      .container {
+          grid-template-columns: 1fr;
+          gap: 0;
+          .content {
+              padding: 1rem 2rem;
+              border-radius: 0;
+              &:nth-of-type(2) {
+                background-color: var(--background);
+              }
+          }
+      }
+    }
   }
