--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -41,7 +41,27 @@ footer {
         display: flex;
         color: var(--accent-color3)
     }
+
+    @media screen and (min-width: 280px) and (max-width: 1080px) {
+        margin: 0;
+        gap: 2rem;
+        padding: 1rem 2rem;
+        .upper {
+            flex-direction: column;
+            gap: 2rem;
+            .links {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 2rem;
+                .link {
+                    gap: 1rem;
+                }
+            }
+        }
+
+    }
 }
+    
 
 [data-theme='light'] {
     footer {
